GNOME Bugzilla – Bug 784837
Wacom Map to Monitor settings reset (lost, not remembered or saved) at every login
Last modified: 2017-08-16 15:03:06 UTC
Environment: Tested under Fedora 26, Gnome 3.24.x, mutter 3.24.3. Description: Wacom "Map to Monitor" settings reset (lost, not remembered or saved) at every login. Both Wayland and Xorg sessions are affected. Notes: 1) As mutter is now controlling the input device, this could actually have been a bug of mutter. 2) According to https://git.gnome.org/browse/mutter/commit/?id=9b9bb9c & https://github.com/GNOME/mutter/commit/aa45fa1e2623e176297c66995aaa3ae8d25f8e30 , this bug should now have been fixed, but apparently it was not the case and I wonder if the developer was talking about something else in Bug 782032.
(In reply to Tyson Tan from comment #0) > Environment: > Tested under Fedora 26, Gnome 3.24.x, mutter 3.24.3. What tablet brand/model? > > Description: > Wacom "Map to Monitor" settings reset (lost, not remembered or saved) at > every login. Both Wayland and Xorg sessions are affected. Is it reset or lost? Do the monitor mapping changes work in the current session as you perform them? If you go again to the "Map to Monitor..." dialog after login, does it show the monitor you last mapped? For X11, you may need commit ce989976fa which didn't make it in time for mutter 3.24.3. But wayland was not affected, so please retest there. > > Notes: > 1) As mutter is now controlling the input device, this could actually have > been a bug of mutter. > > 2) According to https://git.gnome.org/browse/mutter/commit/?id=9b9bb9c & > https://github.com/GNOME/mutter/commit/ > aa45fa1e2623e176297c66995aaa3ae8d25f8e30 , this bug should now have been > fixed, but apparently it was not the case and I wonder if the developer was > talking about something else in Bug 782032. That bug was about tablets being persistently mapped to the first monitor found despite configuration state, not about settings not being applied on login.
> What tablet brand/model? I have 2 places to work in with 2 different sets of hardware: Office A: Wacom Intuos Pro 2 M (PTH-660) & Wacom Cintiq Pro 13 (DTH-1320), both have touch. Office B: Wacom Intuos 4 M (PTK-640) & Wacom Cintiq 13HD (DTK-1300), both have no touch. I also have Bamboo Fun (CTE-450) and new Intuos (CTL-480) around. Regardless of the hardware setting, the symptom is all the same. > Is it reset or lost? Do the monitor mapping changes work in the current session as you perform them? If you go again to the "Map to Monitor..." dialog after login, does it show the monitor you last mapped? The monitor mapping changes work in current session, and the dialogue remembers the settings until I logged out. The settings reset to default state after a login, nothing is shown as being mapped to any monitor, and the system behaves just as what the dialogue displays. The bugs I've reported were can be reproduced on Ubuntu Gnome 17.04 and Fedora 26. However, I have noticed differences under Manjaro Gnome 17.0.2. I will report more information as soon as I can do more tests. Any additional information you want know, please feel free to request.
Additional test has been done to reveal the following information: 1) Fedora 26. Ubuntu Gnome 17.04, Manjaro Gnome 17.0.2, all Gnome 3.24.x, they all had the same result. 2) The number of displays appear to be the trigger of this bug. 3) When there is only 1 display connected, "Map to single monitor" checkbox is checked by default. It can be unchecked, the unchecked state is remembered until log out. Next login the checkbox will be automatically checked again, regardless of the last setting. 4) When there is only 1 display connected, "Keep aspect ratio" option works, and the setting is lept even after log out - log in. 5) Once a secondary display is connected, the function of "Map to single monitor" is immediately turned off. However, if the Display Mapping dialogue is currently opened with "Map to single monitor" checked, the checkbox remains its state (which does not reflects the actual system behavior) until the dialogue is closed. 6) When there is multiple displays connected, "Map to single monitor" checkbox and "Keep aspect ratio" still functions. The settings are remembered until log out. Next log in the settings will be cleared, both options get turned off.
I can also confirm this behavior with my 2nd-gen Intuos Pro under both Wayland and Xorg. This is even the case with mutter 3.24.4 -- which includes a version of the patch mentioned in comment 1. I can set up a tablet mapping through either the control panel or by using the "switch display" action mapped to an ExpressKey. Afterwards, the following settings are present: $ gsettings list-recursively org.gnome.desktop.peripherals.tablet:/org/gnome/desktop/peripherals/tablets/056a:0357/ org.gnome.desktop.peripherals.tablet area [0.0, 0.0, 0.0, 0.0] org.gnome.desktop.peripherals.tablet keep-aspect true org.gnome.desktop.peripherals.tablet left-handed true org.gnome.desktop.peripherals.tablet mapping 'absolute' org.gnome.desktop.peripherals.tablet display ['WAC', 'Cintiq 24HDT', '2BANP00035'] After logging out and then back in, the settings are reverted back to: $ gsettings list-recursively org.gnome.desktop.peripherals.tablet:/org/gnome/desktop/peripherals/tablets/056a:0357/ org.gnome.desktop.peripherals.tablet area [0.0, 0.0, 0.0, 0.0] org.gnome.desktop.peripherals.tablet keep-aspect true org.gnome.desktop.peripherals.tablet left-handed true org.gnome.desktop.peripherals.tablet mapping 'absolute' org.gnome.desktop.peripherals.tablet display ['', '', ''] Arch Linux, with the following locally-compiled GNOME packages: gnome-control-center 3.24.2+22+g2bebdf11b gnome-shell 3.24.3 gtk3 3.22.17+5+g32919a4a02 mutter 3.24.4 nautilus 3.24.2+1+gaab979bbd
Created attachment 356150 [details] [review] g-s-d: common: Exclude non-display attached devices from remapping GsdDeviceMapper has no business with non system/display-attached devices. Make it really sure those are untouched. --- I think this is about the only place that could cause that. The other paths seem to discriminate between display-attached and non-display-attached tablets correctly.
I applied this patch and now see that mapping is properly retained after logout for both Xorg and Wayland. Thanks!
Review of attachment 356150 [details] [review]: makes sense
Cannot test this at the moment because I have already reverted to 3.22 and I'm very busy right now, but thank you for the effort. See you in 3.26+ on major distro releases!