common: Exclude non-display attached devices from remapping

GsdDeviceMapper has no business with non system/display-attached
devices. Make it really sure those are untouched.

https://bugzilla.gnome.org/show_bug.cgi?id=784837